--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -15,8 +15,8 @@ body {
   font-family: $font-family-base;
   font-size: $font-size-base;
   line-height: $line-height-base;
-  color: $dark-color;
-  background-color: $light-color;
+  color: $black;
+  background-color: $background-primary;
 }
 
 a {
