--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,8 @@
 // Colors
 
+$white: #ffffff;
+$black: #000000;
+
 // Scissors Colors
 $scissors-primary: hsl(39, 89%, 49%);
 $scissors-secondary: hsl(40, 84%, 53%);
@@ -59,10 +62,6 @@ $md-breakpoint: map-get($breakpoints, "md");
 $lg-breakpoint: map-get($breakpoints, "lg");
 $xl-breakpoint: map-get($breakpoints, "xl");
 $xxl-breakpoint: map-get($breakpoints, "xxl");
-
-// Border
-$border-radius: 0.375rem;
-$border-color: $light-color;
 
 // Transitions
 $transition-base: all 0.3s ease; 
