--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,31 @@
-@import './variables';
-@import './global';
-@import './mixins';
-@import './reset';
+@import "./variables";
+@import "./global";
+@import "./mixins";
+@import "./reset";
+
+.game-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background: $background-gradient;
+  color: $white;
+  .choices {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+    button {
+      background: $scissors-primary;
+      color: $white;
+      padding: 10px 20px;
+      border: none;
+      cursor: pointer;
+      font-size: 18px;
+      transition: $transition-base;
+      &:hover {
+        background: $scissors-secondary;
+      }
+    }
+  }
+}
