--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: $font-family-base;
   display: flex;
   justify-content: center;
   align-items: center;
