--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,4 +3,7 @@
 @import 'globals';
 
 // Components
+@import 'components/score-board';
+@import 'components/game-board';
+@import 'components/choice-button';
 @import 'components/result';
