feat: Add rules component and fix layout issues
- Add Rules component with modal functionality
- Fix triangle positioning in GameBoard
- Improve responsive design
- Add missing styles and animations

--- a/src/styles/components/_game-board.scss
+++ b/src/styles/components/_game-board.scss
@@ -21,6 +21,17 @@
       left: 50%;
       transform: translate(-50%, -50%);
       z-index: 0;
+      width: 313px;
+      height: 278px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
     }
   }
 }
