--- a/src/styles/components/_game-board.scss
+++ b/src/styles/components/_game-board.scss
@@ -15,14 +15,12 @@
     align-items: center;
     justify-content: center;
 
-    .triangle {
+    .triangle, .pentagon {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       z-index: 0;
-      width: 313px;
-      height: 278px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -32,6 +30,27 @@
         height: 100%;
         object-fit: contain;
       }
+    }
+
+    .triangle {
+      width: 313px;
+      height: 278px;
+    }
+
+    .pentagon {
+      width: 400px;
+      height: 400px;
+    }
+
+    .choice-buttons {
+      position: relative;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
   }
 }
@@ -43,7 +62,12 @@
 
     .triangle {
       width: 200px;
-      height: auto;
+      height: 178px;
+    }
+
+    .pentagon {
+      width: 250px;
+      height: 250px;
     }
   }
 } 
