style: improve game-board layout for xxs screen sizes
- Adjusted styles and layout components to ensure proper responsiveness on extra-extra-small (xxs) screen sizes.
- Refined the layout styles of the game board component to ensure better display and usability on extra-extra-small (xxs) screen sizes.
- These updates enhance usability and visual alignment on very small devices, improving the overall mobile experience.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -93,6 +93,8 @@ $container-padding: $spacing-unit * 4;
 
 // Breakpoints
 $breakpoints: (
+  "xxs": 375px,
+  "xs": 475px,
   "sm": 576px,
   "md": 768px,
   "lg": 992px,
@@ -100,6 +102,8 @@ $breakpoints: (
   "xxl": 1400px,
 );
 
+$xxs-breakpoint: map-get($breakpoints, "xxs");
+$xs-breakpoint: map-get($breakpoints, "xs");
 $sm-breakpoint: map-get($breakpoints, "sm");
 $md-breakpoint: map-get($breakpoints, "md");
 $lg-breakpoint: map-get($breakpoints, "lg");
