--- a/src/styles/components/_choice-button.scss
+++ b/src/styles/components/_choice-button.scss
@@ -4,16 +4,16 @@
     .choice-button {
       &.rock-position {
         position: absolute;
-        bottom: 10%;
+        bottom: 30px;
       }
       &.paper-position {
         position: absolute;
-        left: 10%;
+        left:50px;
         top: 0;
       }
       &.scissors-position {
         position: absolute;
-        right: 10%;
+        right: 50px;
         top: 0;
       }
     }
@@ -22,27 +22,27 @@
     .choice-button {
       &.scissors-position {
         position: absolute;
-        top: -10%;
+        top: -30px;
       }
       &.paper-position {
         position: absolute;
-        right: 0;
-        top: 20%;
+        right: 10px;
+        top: 80px;
       }
       &.spock-position {
         position: absolute;
-        left: 0;
-        top: 20%;
+        left: 10px;
+        top: 80px;
       }
       &.rock-position {
         position: absolute;
-        bottom: -5%;
-        right: 10%;
+        bottom: -20px;
+        right: 60px;
       }
       &.lizard-position {
         position: absolute;
-        bottom: -5%;
-        left: 10%;
+        bottom: -20px;
+        left: 60px;
       }
     }
   }
@@ -107,5 +107,47 @@
       }
     }
   }
-} 
+}
+@media screen and (max-width: $xxs-breakpoint) {
+  .choice-buttons {
+    &.triangle-wrapper {
+      .choice-button {
+        &.rock-position {
+          bottom: 20px;
+        }
+        &.paper-position {
+          left:25px;
+        }
+        &.scissors-position {
+          right: 25px;
+        }
+      }
+    }
+    &.pentagon-wrapper {
+      .choice-button {
+        &.scissors-position {
+          top: -20px;
+        }
+        &.paper-position {
+          right: 10px;
+          top: 60px;
+        }
+        &.spock-position {
+          left: 10px;
+          top: 60px;
+        }
+        &.rock-position {
+          position: absolute;
+          bottom: -15px;
+          right: 40px;
+        }
+        &.lizard-position {
+          position: absolute;
+          bottom: -15px;
+          left: 40px;
+        }
+      }
+    }
+  }
+}  
 /* ---------- RESPONSIVE DESIGN ---------- */
