style: improve game-board layout for sm screen sizes
- Adjusted styles and layout components to ensure proper responsiveness on small (sm) screen sizes.
- Refined the layout styles of the game board component to ensure better display and usability on small (sm) screen sizes.
- These updates enhance usability and visual alignment on small devices, improving the overall mobile experience.

--- a/src/styles/components/_choice-button.scss
+++ b/src/styles/components/_choice-button.scss
@@ -108,6 +108,46 @@
     }
   }
 }
+@media screen and (max-width: $sm-breakpoint) {
+  .choice-buttons {
+    &.triangle-wrapper {
+      .choice-button {
+        &.rock-position {
+          bottom: 20px;
+        }
+        &.paper-position {
+          left: 75px;
+        }
+        &.scissors-position {
+          right: 75px;
+        }
+      }
+    }
+    &.pentagon-wrapper {
+      .choice-button {
+        &.scissors-position {
+          top: -30px;
+        }
+        &.paper-position {
+          right: 60px;
+          top: 60px;
+        }
+        &.spock-position {
+          left: 60px;
+          top: 60px;
+        }
+        &.rock-position {
+          bottom: -15px;
+          right: 95px;
+        }
+        &.lizard-position {
+          bottom: -15px;
+          left: 95px;
+        }
+      }
+    }
+  }
+}  
 @media screen and (max-width: $xs-breakpoint) {
   .choice-buttons {
     &.triangle-wrapper {
