style: improve game-board layout for sm screen sizes
- Adjusted styles and layout components to ensure proper responsiveness on small (sm) screen sizes.
- Refined the layout styles of the game board component to ensure better display and usability on small (sm) screen sizes.
- These updates enhance usability and visual alignment on small devices, improving the overall mobile experience.

--- a/src/styles/components/_game-board.scss
+++ b/src/styles/components/_game-board.scss
@@ -39,10 +39,11 @@
 @media screen and (max-width: $sm-breakpoint) {
   .game-board {
     min-height: 300px;
+    max-width: fit-content;
     margin: $spacing-unit * 20 auto;
     .triangle {
-      width: 242px;
-      height: 220px;
+      width: 200px;
+      height: 178px;
     }
     .pentagon {
       width: 250px;
@@ -55,28 +56,4 @@
     }
   }
 }  
-@media screen and (max-width: $xs-breakpoint) {
-  .game-board {
-    .triangle {
-      width: 222px;
-      height: 200px;
-    }
-    .pentagon {
-      width: 250px;
-      height: 250px;
-    }
-  }
-}  
-@media screen and (max-width: $xxs-breakpoint) {
-  .game-board {
-    .triangle {
-      width: 200px;
-      height: 178px;
-    }
-    .pentagon {
-      width: 250px;
-      height: 250px;
-    }
-  }
-} 
 /* ---------- RESPONSIVE DESIGN ---------- */
