--- a/src/styles/components/_result.scss
+++ b/src/styles/components/_result.scss
@@ -24,6 +24,46 @@
       cursor: pointer;
       z-index: 1;
       transition: transform $transition-normal;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      &.winner {
+        z-index: 2;
+        &::before,
+        &::after {
+          content: "";
+          position: absolute;
+          border-radius: 50%;
+          background: radial-gradient(rgba(255, 255, 255, 0.2), transparent);
+          animation: pulse 1.5s infinite ease-out;
+        }
+        &::before {
+          width: 180px;
+          height: 180px;
+          top: -15px;
+          left: -15px;
+          animation-delay: 0s;
+        }
+        &::after {
+          width: 210px;
+          height: 210px;
+          top: -30px;
+          left: -30px;
+          animation-delay: 0.3s;
+        }
+        .pulse-layer {
+          position: absolute;
+          width: 240px;
+          height: 240px;
+          top: -45px;
+          left: -45px;
+          border-radius: 50%;
+          background: radial-gradient(rgba(255, 255, 255, 0.1), transparent);
+          animation: pulse 1.5s infinite ease-out;
+          animation-delay: 0.6s;
+          z-index: -1;
+        }
+      }
       .inner {
         position: absolute;
         top: 50%;
@@ -38,25 +78,18 @@
         justify-content: center;
         box-shadow: inset 0 5px 0 rgba($black, 0.2);
       }
-      &.rock {
-        background: $rock-gradient;
-        box-shadow: 0 5px 0 #9f1631;
-      }
-      &.paper {
-        background: $paper-gradient;
-        box-shadow: 0 5px 0 #2945c3;
-      }
-      &.scissors {
-        background: $scissors-gradient;
-        box-shadow: 0 5px 0 #c76c1b;
-      }
-      &.lizard {
-        background: $lizard-gradient;
-        box-shadow: 0 5px 0 #5f37a8;
-      }
-      &.spock {
-        background: $spock-gradient;
-        box-shadow: 0 5px 0 #2d8dab;
+      &.rock { background: $rock-gradient; box-shadow: 0 5px 0 #9f1631; }
+      &.paper { background: $paper-gradient; box-shadow: 0 5px 0 #2945c3; }
+      &.scissors { background: $scissors-gradient; box-shadow: 0 5px 0 #c76c1b; }
+      &.lizard { background: $lizard-gradient; box-shadow: 0 5px 0 #5f37a8; }
+      &.spock { background: $spock-gradient; box-shadow: 0 5px 0 #2d8dab; }
+      &.loading {
+        background: #111;
+        box-shadow: none;
+        .inner {
+          background: $white;
+          opacity: 0.3;
+        }
       }
     }
     h3 {
@@ -67,6 +100,7 @@
       letter-spacing: 2px;
     }
   }
+
   .result-text {
     text-align: center;
     h2 {
@@ -93,6 +127,17 @@
     }
   }
 }
+@keyframes pulse {
+  0% {
+    transform: scale(0.8);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
+}
+
 /* ---------- RESPONSIVE DESIGN ---------- */
 @media screen and (max-width: $sm-breakpoint) {
   .result {
@@ -100,11 +145,14 @@
       flex-direction: column;
       gap: $spacing-xl;
     }
+
     .choice {
       order: 1;
     }
+
     .result-text {
       order: 2;
+
       h2 {
         font-size: $text-2xl;
       }
